# 2026-capstone-18

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  preprocess.py  requirements.txt  train.py
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 068947d5e91b_add_pattern_tips_and_weekly_reports.py  09774758d188_create_users_table.py  2d20e3000f0a_add_trigger_categories.py  4a7b2c918f3e_add_cycles_is_period_ongoing.py  6cd3f7dbdd70_add_websocket_connections_fcm_tokens_.py  6de161daa1f1_extend_events_and_users.py  7bdacbea490e_expand_users_and_add_user_settings.py  81190b1e74b8_add_audit_log_table.py  9896f2875883_add_user_settings_sleep_nudge_enabled.py  ab3301b1cf68_drop_user_response_from_stress_events.py  abd7e990abd2_add_sleep_logs.py  adbd022fc5c1_add_stress_events_and_cycles_tables.py  b1f8e3a0c742_add_range_reports.py
backend/app/: config.py  main.py
backend/app/account/: router.py
backend/app/auth/: dependencies.py  google.py  jwt.py  limiter.py  router.py  supabase_client.py
backend/docs/: auth-decisions.md  auth-patterns.md  backend-architecture-spec.md  backend-sprint-plan.md  sprint-3-supabase-runbook.md  sprint-4-deploy-runbook.md  sprint-5-deploy-runbook.md  sprint-5-firebase-runbook.md  sprint-6-deploy-runbook.md  sprint-7-deploy-runbook.md
backend/infra/: README.md  alb.tf  backend.hcl.example  ecr.tf  ecs.tf  locals.tf  main.tf  ml_demo.tf  ml_demo_ecr.tf  monitoring.tf  networking.tf  oidc.tf  outputs.tf  rds.tf  s3.tf  scheduler.tf  secrets.tf  staging.tfvars  variables.tf
backend/scripts/: bootstrap-terraform-state.sh  ci-postgres-init.sh  enable-rds-timescaledb.sh  prewarm_demo_reports.py  prewarm_range_reports.py  run-staging-migration.sh  run_weekly_reports.py  seed_demo_user.py  sprint-4-smoke.sh  sprint-5-smoke.sh  sprint-6-smoke.sh  sprint-7-smoke.sh  sprint-8a-smoke.sh
(+474 files in other folders)
