[tool.poetry]
name = "little-signals-backend"
version = "0.1.0"
description = "Backend service for Project Phase — stress detection and cycle tracking."
authors = ["Anu Bilegdemberel <anu.bnda@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.46.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.49"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pydantic = "^2.13.3"
pydantic-settings = "^2.14.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
structlog = "^25.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"
mypy = "^1.20.2"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["app/tests"]
